--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@ body {
     background-color: whitesmoke;
 }
 
-.todo-list {
+#MainBox {
     background-color: white;
-    margin: auto;
-    width: 30%;
+    margin: 20px auto;
+    width: 70%;
+    min-height: 750px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,20 +19,23 @@ body {
     padding: 30px;
 }
 
-.todo-item {
+#list-item {
     display: flex;
     justify-content: flex-start;
     /* text-align: center; */
     align-items: center;
-    padding: 30px 20px 0;
-    width: 70%;
+    padding: 30px 10px 0;
+    width: 90%;
     border-bottom: 1px solid #cecece;
     font-family: Roboto, sans-serif;
     font-size: 15px;
     font-weight: 100;
+    margin: 0px auto;
+    position: relative;
+    cursor: pointer;
 }
 
-.todo-item span,
+#list-item span,
 input {
     margin-bottom: 10px;
 }
