--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
     background-color: white;
     margin: 20px auto;
     width: 70%;
-    min-height: 750px;
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
